Quick fix: add doctype, shrink text to not wrap header

--- a/public/stylesheets/application.scss
+++ b/public/stylesheets/application.scss
@@ -48,7 +48,7 @@ h3, h4, h5, h6 {
     .nav {
       display: inline-block;
       float: none;
-      font-size: 18px;
+      font-size: 16px;
       font-family: 'Muli', sans-serif;
       a, a:hover, a:visited {
         color: $red;
@@ -258,7 +258,7 @@ h3, h4, h5, h6 {
           a {
             padding: 20px;
             font-weight: bold;
-            font-size: 28px; 
+            font-size: 28px;
           }
         }
       }
